--- a/Alpha Danmaku Rush/Alpha Danmaku Rush/Alpha Danmaku Rush.csproj
+++ b/Alpha Danmaku Rush/Alpha Danmaku Rush/Alpha Danmaku Rush.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="Assets\Images\" />
     <Folder Include="Assets\Sounds\" />
+    <Folder Include="Assets\Fonts\" />
     <Folder Include="Manager\" />
     <Folder Include="Levels\" />
   </ItemGroup>
