--- a/Alpha Danmaku Rush Demo/Alpha Danmaku Rush Demo.csproj
+++ b/Alpha Danmaku Rush Demo/Alpha Danmaku Rush Demo.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Src\Managers\" />
     <Folder Include="Levels\" />
+    <Folder Include="Src\Utils\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
