--- a/Alpha Danmaku Rush Demo/Alpha Danmaku Rush Demo.csproj
+++ b/Alpha Danmaku Rush Demo/Alpha Danmaku Rush Demo.csproj
@@ -22,6 +22,10 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Src\Entities\Enemies\Move\" />
+    <Folder Include="Src\Entities\Enemies\Attack\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
