--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ Alpha Danmaku Rush/.vs/
 # Build results
 Alpha Danmaku Rush/Alpha Danmaku Rush/bin/
 Alpha Danmaku Rush/Alpha Danmaku Rush/obj/
-Alpha Danmaku Rush Demo/bin/
-Alpha Danmaku Rush Demo/obj/
+/Alpha Danmaku Rush Demo/bin/
+/Alpha Danmaku Rush Demo/obj/
